--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin-ui-example",
+  "name": "user-rights-front-end",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
