Reverting commit done by mistake

--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -5,9 +5,7 @@
     "jsx": "react",
     "lib": ["es2017", "dom"],
     "module": "esnext",
-    "strict": true,
-    "moduleResolution": "node",
-    "target": "es2017"
+    "strict": true
   },
   "include": ["./**/*"],
   "exclude": ["node_modules"]
