--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
-  "extends": "vtex",
-  "root": true,
-  "env": {
-    "node": true
+    "extends": ["vtex", "plugin:cypress/recommended"],
+    "root": true,
+    "env": {
+      "node": true
+    }
   }
-}
+  
