--- a/react/package.json
+++ b/react/package.json
@@ -10,6 +10,7 @@
     "typescript": "3.9.7"
   },
   "dependencies": {
-    "@vtex/admin-ui": "^0.110.0"
+    "@vtex/admin-ui": "^0.114.3",
+    "react-intl": "^5.21.0"
   }
 }
