--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "devDependencies": {
+    "@vtex/danger": "^0.2.9",
     "@vtex/prettier-config": "^0.2.0",
     "eslint": "^6.8.0",
     "eslint-config-vtex": "^12.4.0",
