--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /messages/en.json
-    translation: /%original_path%/%locale%.%file_extension%
+    translation: /%original_path%/%two_letters_code%.%file_extension%
